[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://fonts/guifont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/symbolfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://ChangePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://MDictPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Doc.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.748352
margin_top = 0.748291
margin_right = -0.748291
margin_bottom = 0.748291
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="GUI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.96039
margin_top = 4.40607
margin_right = -5.03955
margin_bottom = -5.59393
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/Panel/GridContainer"]
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GUI/Panel/GridContainer/Panel/HBoxContainer"]
margin_right = 34.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button2" type="Button" parent="GUI/Panel/GridContainer/Panel/HBoxContainer"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "祝"

[node name="Button3" type="Button" parent="GUI/Panel/GridContainer/Panel/HBoxContainer"]
margin_left = 77.0
margin_right = 111.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button4" type="Button" parent="GUI/Panel/GridContainer/Panel/HBoxContainer"]
margin_left = 115.0
margin_right = 150.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Panel2" type="Panel" parent="GUI/Panel/GridContainer"]
margin_left = 154.0
margin_right = 1116.0
margin_bottom = 25.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GUI/Panel/GridContainer/Panel2/HBoxContainer"]
margin_left = 403.0
margin_right = 479.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
pressed = true
text = " Origin"

[node name="Button2" type="Button" parent="GUI/Panel/GridContainer/Panel2/HBoxContainer"]
margin_left = 483.0
margin_right = 559.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
pressed = true
text = " Change"

[node name="Panel3" type="Panel" parent="GUI/Panel/GridContainer"]
margin_left = 1120.0
margin_right = 1270.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GUI/Panel/GridContainer/Panel3/HBoxContainer"]
margin_right = 34.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "ﮮ"

[node name="Button2" type="Button" parent="GUI/Panel/GridContainer/Panel3/HBoxContainer"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button3" type="Button" parent="GUI/Panel/GridContainer/Panel3/HBoxContainer"]
margin_left = 77.0
margin_right = 111.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button4" type="Button" parent="GUI/Panel/GridContainer/Panel3/HBoxContainer"]
margin_left = 115.0
margin_right = 150.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "漣"

[node name="Panel4" type="Panel" parent="GUI/Panel/GridContainer"]
margin_top = 29.0
margin_right = 150.0
margin_bottom = 681.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="GUI/Panel/GridContainer/Panel4/HBoxContainer"]
margin_right = 150.0
margin_bottom = 652.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="GUI/Panel/GridContainer/Panel4/HBoxContainer/ItemList"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="GUI/Panel/GridContainer"]
margin_left = 154.0
margin_top = 29.0
margin_right = 1116.0
margin_bottom = 681.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Panel/GridContainer/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.05829
margin_bottom = 1.05829
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer"]
margin_right = 962.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/symbol_color = Color( 0.392157, 0.54902, 0.901961, 1 )
custom_colors/number_color = Color( 1, 1, 1, 1 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
breakpoint_gutter = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangePanel" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 209.0
margin_right = 962.0
margin_bottom = 414.0

[node name="MDictPanel" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 418.0
margin_right = 962.0
margin_bottom = 623.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer"]
margin_top = 627.0
margin_right = 962.0
margin_bottom = 652.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer"]
margin_right = 479.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button4" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 34.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = "麗"

[node name="Button5" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button6" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 76.0
margin_right = 110.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button7" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 114.0
margin_right = 148.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer"]
margin_left = 483.0
margin_right = 962.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer3"]
margin_left = 331.0
margin_right = 365.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button2" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer3"]
margin_left = 369.0
margin_right = 403.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = ""

[node name="Button3" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer3"]
margin_left = 407.0
margin_right = 441.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = "韛"

[node name="Button4" type="Button" parent="GUI/Panel/GridContainer/Panel5/VBoxContainer/HBoxContainer/HBoxContainer3"]
margin_left = 445.0
margin_right = 479.0
margin_bottom = 25.0
rect_min_size = Vector2( 34, 25 )
custom_fonts/font = ExtResource( 3 )
text = "ﬤ"

[node name="TextureRect" type="TextureRect" parent="GUI/Panel/GridContainer/Panel5"]
visible = false
anchor_right = 1.0
anchor_bottom = 0.957055
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopupPanel" type="PopupPanel" parent="GUI/Panel/GridContainer/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Doc" parent="GUI/Panel/GridContainer/Panel5/PopupPanel" instance=ExtResource( 6 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel6" type="Panel" parent="GUI/Panel/GridContainer"]
margin_left = 1120.0
margin_top = 29.0
margin_right = 1270.0
margin_bottom = 681.0
rect_pivot_offset = Vector2( -1281.78, 331 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel6"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="GUI/Panel/GridContainer/Panel6/HBoxContainer"]
margin_right = 150.0
margin_bottom = 652.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel7" type="Panel" parent="GUI/Panel/GridContainer"]
margin_top = 685.0
margin_right = 150.0
margin_bottom = 710.0
rect_min_size = Vector2( 150, 25 )

[node name="LineEdit" type="LineEdit" parent="GUI/Panel/GridContainer/Panel7"]
anchor_right = 1.0
anchor_bottom = 1.0
placeholder_text = "serach filename"
placeholder_alpha = 0.333
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel8" type="Panel" parent="GUI/Panel/GridContainer"]
margin_left = 154.0
margin_top = 685.0
margin_right = 1116.0
margin_bottom = 710.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Panel/GridContainer/Panel8"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="GUI/Panel/GridContainer/Panel8/HBoxContainer"]
margin_right = 962.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GUI/Panel/GridContainer/Panel8/HBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Button" parent="GUI/Panel/GridContainer/Panel8/HBoxContainer/ProgressBar/CenterContainer"]
margin_left = 410.0
margin_top = 2.0
margin_right = 551.0
margin_bottom = 22.0
focus_mode = 0
enabled_focus_mode = 0
text = "Loading Template ..."
flat = true

[node name="Panel9" type="Panel" parent="GUI/Panel/GridContainer"]
margin_left = 1120.0
margin_top = 685.0
margin_right = 1270.0
margin_bottom = 710.0
rect_min_size = Vector2( 150, 25 )

[node name="LineEdit" type="LineEdit" parent="GUI/Panel/GridContainer/Panel9"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.629272
margin_bottom = -0.629272
placeholder_text = "serach keyword"
placeholder_alpha = 0.333
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="resized" from="GUI" to="." method="_on_GUI_resized"]
[connection signal="button_down" from="GUI/Panel/GridContainer/Panel2/HBoxContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="GUI/Panel/GridContainer/Panel2/HBoxContainer/Button2" to="." method="_on_Button2_button_down"]
[connection signal="item_selected" from="GUI/Panel/GridContainer/Panel4/HBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
